compiler/testData/diagnostics/tests/regressions/Jet11.fir.kt
// JET-11 Redeclaration & Forward reference for classes cause an exception
open class <!CLASSIFIER_REDECLARATION!>NoC<!>
class NoC1 : NoC()
open class <!CLASSIFIER_REDECLARATION!>NoC<!>
